@@ -138,6 +138,8 @@ BA  31- revert 2-12-0 C18: qfbsolve with default flag = previous behaviour
     40- gpow(x,n): faster and more precise when n is a t_COMPLEX
     41- faster formula for log(2)
 BA  42- nfgaloisconj(deg 2 pol): swap result to follow nfroots.
+BA  43- lexical variables names can now reuse builtin functions names as in
+        fun(theta)=my(gamma=1/3);sum(omega=1,10,exp(2*I*Pi*gamma*theta*omega)
 
   Added
      1- new GP function rootsof1
